# inference-engine-toy

./: README.md  demo.py  examples.py  learning.md  main.py  model_trace_demo.py  popular_model_view.py  requirements.txt  test_model_info.json  web_app.py
inference_cpp/: CMakeLists.txt  README.md  build.sh  compare_inference.py  demo.sh  inference.cpp  pytorch_inference.py
src/: inference_engine.py  model_viewer.py
